unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/NF_Nice_InContact_API_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configurations(endpoint, request type, timeout, header, etc) to be used in callouts to the Nice InContact API.</description>
    <label>Nice InContact API Config</label>
    <pluralLabel>Nice InContact API Configs</pluralLabel>
</CustomObject>