unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Attribute_Name_to_search_in_response__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name_to_search_in_response__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>The JSON attribute (in the response) that&#39;ll contain the list of records to insert.</inlineHelpText>
    <label>Attribute Name to search in response</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>