unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Check_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Check_Response_Body__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should be true if the response&#39;s body verification is needed.</inlineHelpText>
    <label>Check Response Body</label>
    <type>Checkbox</type>
</CustomField>