unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Contain_conditions_In_Response_s_Records__c.field-meta.xml
<CustomField>
    <fullName>Contain_conditions_In_Response_s_Records__c</fullName>
    <inlineHelpText>#^# separated list of conditions that need to be checked during record creation. E.g. agentStateId:2#^#outStateId:0</inlineHelpText>
    <label>Contain-conditions In Response&#39;s Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>