unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Create_Records__c.field-meta.xml
<CustomField>
    <fullName>Create_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether to create records after a successful callout. If it&#39;s checked, you&#39;d need to mention the object name in the &quot;Object to Create&quot; field.</inlineHelpText>
    <label>Create Records</label>
    <type>Checkbox</type>
</CustomField>