unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Delete_Obsolete_Records__c.field-meta.xml
<CustomField>
    <fullName>Delete_Obsolete_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Keep this checked if you need to delete the records created by this API sync.</inlineHelpText>
    <label>Delete Obsolete Records</label>
    <type>Checkbox</type>
</CustomField>