unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether this callout is a part of Ring Central data sync.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>