unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Object_to_Create__c.field-meta.xml
<CustomField>
    <fullName>Object_to_Create__c</fullName>
    <inlineHelpText>The object type that needs to be created. If &quot;Create Records&quot; is checked, this value is mandatory.</inlineHelpText>
    <label>Object to Create</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NF_Agents_Performance__c</fullName>
                <label>Agent Performance</label>
            </value>
            <value>
                <fullName>NF_Skills_SLA_Summary__c</fullName>
                <label>Skills SLA Summary</label>
            </value>
            <value>
                <fullName>NF_Skills_Summary__c</fullName>
                <label>Skills Summary</label>
            </value>
            <value>
                <fullName>NF_Teams_Performance_Total__c</fullName>
                <label>Teams Performance Total</label>
            </value>
            <value>
                <fullName>NF_Contacts_Completed__c</fullName>
                <label>Contacts Completed</label>
            </value>
            <value>
                <fullName>NF_Agent_State_History__c</fullName>
                <label>Agent State History</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>