unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <inlineHelpText>Request Body, if any(in JSON format)</inlineHelpText>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>