unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Request_Endpoint__c</fullName>
    <inlineHelpText>The endpoint for the callout</inlineHelpText>
    <label>Request Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>