unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <inlineHelpText>Key-value pairs of headers in JSON format. Eg. {&quot;Accept&quot;:&quot;application/json&quot;, &quot;Content-Type&quot;:&quot;application/json&quot;}</inlineHelpText>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>