unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout__c</fullName>
    <defaultValue>10000</defaultValue>
    <inlineHelpText>The max time for which apex should wait for the response.
Min: 1, Max: 120000, Default: 10000</inlineHelpText>
    <label>Request Timeout(in ms)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>