unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>The type of request</inlineHelpText>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>