unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Sample_Response_Used_in_test_class__c.field-meta.xml
<CustomField>
    <fullName>Sample_Response_Used_in_test_class__c</fullName>
    <label>Sample Response(Used in test class)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>