unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Specific_Ids__c.field-meta.xml
<CustomField>
    <fullName>Specific_Ids__c</fullName>
    <inlineHelpText>Specify the comma-separated list of agent/contact/skill/team ids for which this API needs to be called.</inlineHelpText>
    <label>Specific Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>