unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/fields/Successful_Callout_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Successful_Callout_Status_Code__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>Please enter the status code of a successful callout of this type. E.g. 200</inlineHelpText>
    <label>Successful Callout Status Code</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>