unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/validationRules/Attribute_name_required_to_create_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Attribute_name_required_to_create_record</fullName>
    <active>true</active>
    <description>As &quot;Create Records&quot; is checked, attribute name to look for during record creation is mandatory.</description>
    <errorConditionFormula>Create_Records__c &amp;&amp; ISBLANK(Attribute_Name_to_search_in_response__c)</errorConditionFormula>
    <errorDisplayField>Attribute_Name_to_search_in_response__c</errorDisplayField>
    <errorMessage>As &quot;Create Records&quot; is checked, please enter an attribute name to look for during record creation.</errorMessage>
</ValidationRule>