unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/validationRules/No_Record_to_create.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Record_to_create</fullName>
    <active>true</active>
    <description>The &quot;Contain-conditions In Response&#39;s Records&quot; and &quot;Specific Ids&quot; fields can only be filled when the &quot;Create Records&quot; checkbox is checked.</description>
    <errorConditionFormula>!Create_Records__c &amp;&amp; (!ISBLANK(Contain_conditions_In_Response_s_Records__c) || !ISBLANK(Specific_Ids__c))</errorConditionFormula>
    <errorMessage>The &quot;Contain-conditions In Response&#39;s Records&quot; and &quot;Specific Ids&quot; fields can only be filled when the &quot;Create Records&quot; checkbox is checked.</errorMessage>
</ValidationRule>