unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/validationRules/Object_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Name_is_required</fullName>
    <active>true</active>
    <description>As &quot;Delete Obsolete Records&quot; or &quot;Create Records&quot; is checked, selecting an object name is mandatory.</description>
    <errorConditionFormula>(Delete_Obsolete_Records__c || Create_Records__c) &amp;&amp; ISPICKVAL(Object_to_Create__c, &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Object_to_Create__c</errorDisplayField>
    <errorMessage>As &quot;Delete Obsolete Records&quot; or &quot;Create Records&quot; is checked, please select a value.</errorMessage>
</ValidationRule>