unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/validationRules/Validate_Timeout.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Timeout</fullName>
    <active>true</active>
    <description>Request Timeout has a minimum value of 1 and a maximum value of 120000</description>
    <errorConditionFormula>Request_Timeout__c &lt; 1 || Request_Timeout__c &gt; 120000</errorConditionFormula>
    <errorDisplayField>Request_Timeout__c</errorDisplayField>
    <errorMessage>The value should be between 1 and 120000 (both values inclusive).</errorMessage>
</ValidationRule>