unpackaged/main/default/objects/NF_Nice_InContact_API_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Active__c</columns>
    <columns>Request_Endpoint__c</columns>
    <columns>Object_to_Create__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>